--- a/application-code/package.json
+++ b/application-code/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "connect-mongodb-session": "^3.1.1",
     "csurf": "^1.11.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
